--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <aside id="header">
         <section class="profile">
             <img src="static/img/perfil.jpeg" alt="Imagem de Perfil">
-            <h1>Nikolas Raniery</h1>
+            <h1>Artur Siqueira</h1>
             <div class="social-links mt-4 text-center">
-                <a target="_blank" href="https://www.linkedin.com/in/nikolas-raniery-9506a521a/">
+                <a target="_blank" href="">
                     <i class="bi bi-linkedin"></i>
                 </a>
-                <a target="_blank" href="https://github.com/nikolasraniery">
+                <a target="_blank" href="https://github.com/dubai782">
                     <i class="bi bi-github"></i>
                 </a>
-                <a target="_blank" href="https://www.instagram.com/nikolas_raniery/">
+                <a target="_blank" href="https://www.instagram.com/artur.siq/">
                     <i class="bi bi-instagram"></i>
                 </a>
 
@@ -63,9 +63,8 @@
 
         <section id="inicio" class="row m-0 p-0">
             <div class="col-md-5 d-flex justify-content-center align-items-center flex-column">
-                <h2 class="text-white text-shadow">Nikolas Raniery</h2>
-                <span id="subtitle" class="text-white text-shadow">Estudante de Análise e Desenvolvimento de
-                    Sistemas</span>
+                <h2 class="text-white text-shadow">Artur Siqueira</h2>
+                <span id="subtitle" class="text-white text-shadow">Front-end web development</span>
 
             </div>
 
@@ -85,16 +84,11 @@
                 <div class="col-md-12" data-anime="down">
                     <h2 class="pt-3">Sobre</h2>
                     <p>
-                        Desde pequeno, o interesse por computação dominava minha forma de pensar e agir. A forma como os
-                        computadores funcionavam me despertava ainda mais curiosidade!
-                        Consegui canalizar este interesse e além de desejo profissional se tornou também um hobby.
-                        Iniciei uma graduação em Engenharia de Computação e por esse
-                        primeiro contato me fazer gostar ainda mais da área de desenvolvimento acabei por mudar de curso
-                        e recentemente no ano de 2022 iniciei uma nova graduação,
-                        porém, desta vez em uma área focada ainda mais em programação, Análise e Desenvolvimento de
-                        Sistemas. Pretendo continuar esta jornada como Dev ainda sem saber
-                        em qual área irei atuar, mas com a certeza de que nunca vou parar meu aprendizado como pessoa
-                        desenvolvedora !
+                        Gosto de ajudar o próssimo desde pequeno, em 2021 cursei Ciência da Computação 
+                        na Pontifícia Universidade Católica
+                        de Minas Gerais, primeiro e segundo período. Com meu altruismo pensei com a tecnologia conseguiria alcançar mais pessoas.
+                        Mas acabei que não continuei o curso.Iniciei curso técnico de enfermagem no ano de 2022, continuaria ajudando o próximo,
+                        mas o que mais gostei nesse pouco tempo de ciência da computação, foi criar sites, isso tornou se um passa tempo.
                     </p>
                 </div>
             </div>
@@ -106,12 +100,10 @@
                 </div>
                 <div class="col-md-8" data-anime="right">
                     <h3>Técnico de Informática N2</h3>
-                    <p>Atualmente atuo como técnico de informática nível 2
-                        no Grupo Santa Casa BH, trabalhando
-                        principalmente
-                        com suporte técnico, manutenção preventiva e apoio logístico.
-                        Também faço graduação em Análise e Desenvolvimento de Sistemas e
-                        me aventuro em alguns projetos como este portifólio.
+                    <p>Atualmente cursando técnico de enfermagem
+                        na Faculdade Santa Casa BH e atuo no 
+                        Centro de Especialidades Médicas da Santa Casa, 
+                        como posso ajudar.
                     </p>
 
                     <div class="row mt-3 mb-3">
@@ -268,23 +260,24 @@
                         <h3 class="cv-title">Educação</h3>
 
                         <div class="cv-item" data-anime="up">
-                            <h4> Análise e Desenvolvimento de Sistemas</h4>
+                            <h4>Técnico Enfermagem</h4>
                             <h5>2022 - Atualmente</h5>
-                            <p><em>Universidade Estácio de Sá</em></p>
-                            <p>Graduação tecnológica em Análise e Desenvolvimento de Sistemas</p>
+                            <p><em>Faculdade Santa Casa Belo Horizonte</em></p>
+                            <p>Cursando</p>
                         </div>
 
                         <div class="cv-item" data-anime="up">
-                            <h4>Engenharia de Computação</h4>
-                            <h5>2021 - Atualmente</h5>
-                            <p><em>CEFET/MG - Centro Federal de Educação Tecnológica</em></p>
-                            <p>Graduação em Engenharia de Computação</p>
+                            <h4>Ciência da Computação</h4>
+                            <h5>2021</h5>
+                            <p><em>Pontifícia Universidade Católica
+                        de Minas Gerais</em></p>
+                            <p>Primeiro e segundo período</p>
                         </div>
 
                         <div class="cv-item" data-anime="up">
                             <h4>Conclusão do Ensino Médio</h4>
-                            <h5>2016 - 2019</h5>
-                            <p><em>Escola Estadual Maurício Murgel</em></p>
+                            <h5>2020</h5>
+                            <p><em>Colégio Tiradentes PMMG - Unidade Argentino Madeira</em></p>
                             <p>Ensino Médio Completo</p>
                         </div>
                     </div>
@@ -292,24 +285,25 @@
                         <h3 class="cv-title">Profissional</h3>
 
                         <div class="cv-item" data-anime="up">
-                            <h4>Técnico de Informática Nivel 2</h4>
+                            <h4>Posso Judar</h4>
                             <h5>2022 - Atualmente</h5>
-                            <p><em>Faculdade Santa Casa BH</em></p>
-                            <p>Apoio logístico, manutenção preventiva e suporte ao cliente</p>
+                            <p><em>Centro de Especilidades Médicas Santa Casa Belo Horizonte </em></p>
+                            <p>Apoio no acolhimento dos pacientes, passar informações para os mesmos
+                                caso tenhama alguma duvida de onde devem ir para serem consultados</p>
                         </div>
 
                         <div class="cv-item" data-anime="up">
-                            <h4>Auxiliar Operacional</h4>
-                            <h5>2021 - 2022</h5>
-                            <p><em>Premier Logistics</em></p>
-                            <p>Organização e triagem das encomendas</p>
+                            <h4>Escoteiro</h4>
+                            <h5>2009 - 2022</h5>
+                            <p><em>Grupo Escoteiro 23° BALEIA</em></p>
+                            <p>Adquirindo conhecimento cada vez mais, criatividade, trabalho em equipe</p>
                         </div>
 
                         <div class="cv-item" data-anime="up">
-                            <h4>Auxiliar de Produção</h4>
-                            <h5>2020 - 2020</h5>
-                            <p><em>Sabor de Pão</em></p>
-                            <p>Produção de produtos alimentícios</p>
+                            <h4></h4>
+                            <h5></h5>
+                            <p><em></em></p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -332,14 +326,14 @@
                             <div class="row row-cols-1 row-cols-md-3 g-4">
                                 <div class="col">
                                     <div class="card">
-                                        <img src="static/img/Portifolio1.jpeg" class="card-img-top"
-                                            alt="Site Faculdade Santa Casa">
+                                        <img src="static/img/em-breve-glitch.gif" class="card-img-top"
+                                            alt="EM BREVE">
                                         <div class="card-body">
-                                            <h5 class="card-title">Landding Page Faculdade Santa Casa</h5>
-                                            <p class="card-text">Projeto de desenvolvimento web criado com HTML5 e CSS.
+                                            <h5 class="card-title">EM BREVE</h5>
+                                            <p class="card-text">EM BREVE
                                             </p>
                                             <div class="d-flex justify-content-center">
-                                                <a href="https://nikolasraniery.github.io/site-faculdade-santacasa/"
+                                                <a href=""
                                                     target="_blank" class="btn btn-outline-primary"><i
                                                         class="bi bi-link-45deg"></i></a>
                                             </div>
@@ -401,11 +395,11 @@
 
                             <div class="email">
                                 <h4><i class="bi bi-envelope-fill"></i> Email:</h4>
-                                <p>nikolassraniery@gmail.com</p>
+                                <p>arturfsiqueira78@gmail.com</p>
                             </div>
 
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3750.7331635276146!2d-44.01735350000001!3d-19.935646299999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69677a7bb9d25%3A0x41ed560fbe045952!2sR.%20Jo%C3%A3o%20Batista%20Vi%C3%AAira%20-%20Belo%20Horizonte%2C%20MG%2C%20Brasil!5e0!3m2!1spt-BR!2sde!4v1664226924504!5m2!1spt-BR!2sde"
+                                src="https://www.google.com/maps/place/Grupo+Escoteiro+Baleia+-+23+GEAMG/@-19.9272417,-43.8991252,17z/data=!3m1!4b1!4m5!3m4!1s0xa6997cc76f62fb:0x60fe7a1ab8a38744!8m2!3d-19.9272503!4d-43.8969692?hl=pt-BR"
                                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade" class="w-100"></iframe>
                         </div>
@@ -471,7 +465,7 @@
     <footer id="footer">
         <div class="container">
             <div class="text-center">
-                &copy; Copyright <strong>Nikolas Raniery</strong>
+                &copy; Copyright <strong>Artur Siqueira</strong>
             </div>
         </div>
     </footer>
